--- a/MathGame/MathGame.csproj
+++ b/MathGame/MathGame.csproj
@@ -115,8 +115,8 @@
     </Compile>
     <Compile Include="Classes\Player.cs" />
     <Compile Include="Classes\Question.cs" />
-    <Compile Include="Views\QuestionWindow.xaml.cs">
-      <DependentUpon>QuestionWindow.xaml</DependentUpon>
+    <Compile Include="Views\QuestionPage.xaml.cs">
+      <DependentUpon>QuestionPage.xaml</DependentUpon>
     </Compile>
     <Page Include="Views\AchievementsPage.xaml">
       <SubType>Designer</SubType>
@@ -150,7 +150,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\QuestionWindow.xaml">
+    <Page Include="Views\QuestionPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
